# mars-ros

./: .Dockerfile.swp  .gitignore  .gitmodules  CompileGuide.md  Dockerfile  Dockerfile.lidar_and_tracking  Dockerfile.lidar_branch  LICENSE  README.md  RUN.md  camera.sh  my_log_file.txt  packages.txt  record.sh  setup.sh  start.sh  start1.sh  start2.sh  wet.rosinstall  with_webcam.txt  without_webcam.txt
src/actions/: CMakeLists.txt  package.xml
src/actions/launch/: gpio.launch  run-ir-node.launch
src/actions/msg/: DigitalFeedbackGpio.msg
src/actions/scripts/: action_base.py  action_definitions.py  actions_main.py  actions_node.py  gpio_read.py  ir_adc_node.py  ladder_actuator_read.py
src/actions/srv/: StartAction.srv
src/camera_streamer/: CMakeLists.txt  README.md  package.xml
src/camera_streamer/config/: webcam0_theora.yaml  webcam1_theora.yaml
src/camera_streamer/launch/: load_config.launch
src/camera_streamer/src/: camera_streamer_node.cpp
src/hero_board/: .gitignore  CMakeLists.txt  README.md  package.xml
src/hero_board/msg/: HeroFeedback.msg  IRAngleData.msg  IRSensorFeed.msg  IRSensorFeedback.msg  IRVector.msg  MotorCommand.msg  MotorVal.msg
src/hero_board/scripts/: ir_computation.cpp  ir_computation.py  motor_com.py  motor_send.py  permission.sh  recv.py  send_recv.py  send_recv_dummy.py  serial_manager.py
src/hero_board/scripts/test_scripts/: test.cpp  test.py
src/hero_board/scripts/utils/: proto_test.py  protocol.py
src/hero_board/srv/: EmergencyStop.srv  GetState.srv  SetState.srv
src/iri_base_algorithm/: CMakeLists.txt  README.md  mainpage.dox  package.xml
src/iri_base_algorithm/doc/: iri_base_algorithm.odp
src/iri_base_algorithm/include/iri_base_algorithm/: iri_base_algorithm.h
src/iri_point_cloud_hole_detection/: CMakeLists.txt  README.md  package.xml  point_cloud_hole_detector_nodelet_plugin.xml
src/iri_point_cloud_hole_detection/cfg/: PointCloudHoleDetection.cfg
src/iri_point_cloud_hole_detection/config/: far_config.yaml  near_config.yaml
src/iri_point_cloud_hole_detection/docs/: HoleDetectionConfig-usage.dox  HoleDetectionConfig.dox  HoleDetectionConfig.wikidoc
src/iri_point_cloud_hole_detection/include/: iri_point_cloud_hole_detection_alg.h  iri_point_cloud_hole_detection_alg_node.h
src/iri_point_cloud_hole_detection/launch/: node.launch  nodelet.launch
src/iri_point_cloud_hole_detection/src/: iri_point_cloud_hole_detection_alg.cpp  iri_point_cloud_hole_detection_alg_node.cpp
src/iriutils/: .gitlab-ci.yml  CMakeLists.txt  Findiriutils.cmake  ReadMe.md
src/iriutils/doc/: doxygen.conf  doxygen_project_name.conf
src/iriutils/doc/images/: thread_states.eps  thread_states.odp
src/iriutils/include/threads/: thread.h  threadserver.h
src/iriutils/include/time/: ctime.h
src/iriutils/scripts/: add_lib_to_ld_config.sh  remove_lib_from_ld_config.sh
src/iriutils/scripts/debian/: postinst  prerm
src/iriutils/src/: CMakeLists.txt
src/iriutils/src/events/: event.cpp  eventexceptions.cpp  eventserver.cpp
src/iriutils/src/examples/: CMakeLists.txt  test_bothservers.cpp  test_events.cpp  test_eventserver.cpp  test_logs.cpp  test_threads.cpp  test_threadserver.cpp  test_time.cpp
src/iriutils/src/exceptions/: exceptions.cpp
src/iriutils/src/mutex/: mutex.cpp  mutexexceptions.cpp
src/iriutils/src/threads/: thread.cpp  threadexceptions.cpp  threadserver.cpp
src/iriutils/src/time/: ctime.cpp  ctimeexceptions.cpp
src/iriutils/test/: CMakeLists.txt
src/iriutils/test/gtest/: CMakeLists.txt
src/iriutils/test/mutex/: mutex_test.cpp
src/navigation/: CMakeLists.txt  ap  apriltag_simulation.sh  apriltag_world.world  frames.gv  package.xml
src/navigation-v2/src/robot_setup_tf/: CMakeLists.txt  package.xml  package.xml~
src/navigation/config/: bin_position.yaml  costmap_comman_params.yaml  costmap_common_params copy.yaml  costmap_common_params.yaml  costmap_common_params_waffle.yaml  global_costmap_params copy.yaml  global_costmap_params.yaml  local_costmap_params copy.yaml  local_costmap_params.yaml  rviz-config.rviz
src/navigation/config/apriltag/: settings.yaml  tag_positions.yaml  tags.yaml
src/navigation/config/cameras/: depstech_webcam_calibration.yaml  xps_webcam_calibration.yaml
src/navigation/launch/: apriltag_simulation.launch  camera.launch  camera_testing.launch  cameras.launch  d435_camera.launch  depth_camera.launch  dummy-laser.launch  hole-detection.launch  hole_world.launch  laser-virtualizer.launch  lidar-and-tracking.launch  malvi_config.launch  move_base.launch  navigation_main.launch  occupancy.launch  realsense_receiver.launch  surface_mesh.launch  t265_camera.launch  tf_setup.launch  turtlebot3_navigation.launch  turtlebot3_remote.launch  turtlebot3_world.launch
src/navigation/launch/cameras/: webcam_load_config.launch  webcams.launch
src/navigation/msg/: AutonomyState.msg
src/navigation/rviz/: apriltag_computation.rviz  tfs.rviz  turtlebot3_navigation.rviz
src/navigation/scripts/: apriltag_computation.py  goal_pose.py  init_pose.py  naive-nav.py  realsense_receiver.py  surface_mesh.py  t265_camera.sh
src/navigation/src/: .dummy_laser_scan.cpp.swp  dummy_laser_scan.cpp  environment_visualizer.cpp  fake_odom.cpp  localization.cpp  publish-point.cpp  static_tf.cpp
src/navigation/turtlebot3_navigation/cmake/: turtlebot3_navigationConfig.cmake
src/navigation/turtlebot3_navigation/config/: global_costmap_params.yaml
src/navigation/turtlebot3_navigation/launch/: move_base.launch  turtlebot3_navigation.launch  turtlebot3_world.launch
src/navigation/urdf/: turtlebot3_waffle.urdf.xacro
src/navigation/worlds/: apriltag_world.world  crater-and-boulders.world  crater.world  more-craters.world
src/processing/: CMakeLists.txt  package.xml
src/processing/launch/: pointcloud.launch  proc.launch
src/processing/src/: sub.py  vis_seg.py
src/rpc-server/: CMakeLists.txt  README.md  jetsonrpc.proto  package.xml
src/rpc-server/src/: grpc-server.cpp
src/segmentation/: CMakeLists.txt  README.md  package.xml
src/segmentation/src/: seg.cpp  vis_seg.py
(+3 files in other folders)
