<?xml version="1.0"?>
<package format="2">
  <name>iri_base_algorithm</name>
  <version>1.0.0</version>
  <description>The iri_base_algorithm package</description>

  <maintainer email="labrobotica@iri.upc.edu">labrobotica</maintainer>

  <license>LGPL</license>

  <url type="website">http://wiki.ros.org/iri_base_algorithm</url>

  <author>Joan Perez</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>diagnostic_updater</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
